@@ -25,7 +25,7 @@ dependencies {
     compile project(':checker-qual')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile project(':util')
+    testCompile project(':framework-test')
     testCompile sourceSets.testannotations.output
 
     testannotationsCompile project(':checker-qual')
