@@ -23,7 +23,7 @@ dependencies {
     compileOnly project(':checker-qual')
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile project(':util')
+    testCompile project(':framework-test')
     testCompile sourceSets.testannotations.output
 }
 
